# class19_bootcamp

./: Dockerfile  README.md  main.py  pyproject.toml  test.db
